# kadet

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  shell.nix
.github/workflows/: python-lint-test.yml  python-package.yml  python-pip-publish.yml
.reuse/: dep5
kadet/: __init__.py
tests/: __init__.py  multidoc.yaml  test_dict.py  test_kadet.py  test_multidoc.py  test_sha256.py
