[tool.poetry]
name = "kadet"
version = "0.3.0"
description = "Easily define and reuse complex Python objects that serialize into JSON or YAML."
homepage = "https://github.com/kapicorp/kadet"
repository = "https://github.com/kapicorp/kadet"
readme = "README.md"
keywords = ["config", "kapitan", "kadet", "yaml", "json"]
authors = ["Ricardo Amaro <ramaro@kapicorp.com>"]
license = "Apache License 2.0"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = '>=3.10'
PyYAML = ">=5.3.1"
typeguard = ">=2.12.1"
python-box = "6.0.2"
pydantic = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
