[tool.poetry]
name = "kadet"
version = "0.3.1"
description = "Easily define and reuse complex Python objects that serialize into JSON or YAML."
homepage = "https://github.com/kapicorp/kadet"
repository = "https://github.com/kapicorp/kadet"
readme = "README.md"
keywords = ["config", "kapitan", "kadet", "yaml", "json"]
authors = ["Ricardo Amaro <ramaro@kapicorp.com>"]
license = "Apache License 2.0"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = '>=3.10'
PyYAML = ">=5.3.1"
typeguard = ">=3.0.0"
python-box = "6.0.2"
pydantic = ">=2.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.1.1"
black = "^24.3.0"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
