[project]
name = "kadet"
version = "0.3.2"
description = "Easily define and reuse complex Python objects that serialize into JSON or YAML."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
keywords = ["config", "kapitan", "kadet", "yaml", "json"]
authors = [
    { name = "Ricardo Amaro", email = "ramaro@kapicorp.com" },
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "PyYAML>=5.3.1",
    "typeguard>=3.0.0",
    "python-box>6.0.0",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/kapicorp/kadet"
Repository = "https://github.com/kapicorp/kadet"

[dependency-groups]
dev = [
    "pytest>=8.1.1",
    "ruff>=0.6.0",
    "pre-commit>=3.7.0",
    "coverage>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kadet"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]
quote-style = "double"
