[metadata]
name = kadet
version = 0.1.3
author = Ricardo Amaro
author_email = ramaro@kapicorp.com
home_page = https://github.com/kapicorp/kadet
description = Easily define and reuse complex Python objects that serialize into JSON or YAML.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_file = LICENSES/Apache-2.0.txt
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Bug Tracker = https://github.com/kapicorp/kadet/issues


[options]
packages = kadet
install_requires =
    PyYAML >= 5.3.1
    typeguard >= 2.12.1
setup_requires =
    setuptools
